# snippets

babel/: babel.py
battleship/: Battleship.java  Grid.java  Location.java  Player.java  Print.java  Ship.java
carousel/: index.html  package-lock.json  package.json
carousel/src/: main.ts  style.css
github-identicons/: go.mod  make_graphs.py  make_identicon.py  requirements.txt
github-identicons/crawler/: README.md  main.go
gonomics/: .gitignore  go.mod  main.go
gonomics/genome/: genome.go  genomematcher.go
gonomics/trie/: trie.go
lights-out/: lights-out.py  main.cpp
pastebin/: app.py
pigeon/: .gitignore  base_colors.txt  pigeon.py
sfrob/: Cargo.toml
sfrob/src/: main.rs
sliding-puzzle/: LICENSE  index.html  package-lock.json  package.json
sliding-puzzle/src/: main.ts  puzzle.ts  style.css
stacker/: .gitignore  Makefile.am  configure.ac
stacker/src/: stacker.c
toontown/: LICENSE  README.md  default.nix  home_directory.patch  interrogate.nix  libsunrise.nix  move_logs.patch  panda3d.nix  resources.nix  strict_timestamps.patch  toontown.nix
toontown/npins/: sources.json
